Fix login spacing

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -251,6 +251,7 @@ html, body
 	height: 100%;
 
 	padding: 0;
+	padding-top: 64px;
 
 	display: flex;
 
